add prolog deps

--- a/lessons/hands-on-nethack/NetHackProlog.ipynb
+++ b/lessons/hands-on-nethack/NetHackProlog.ipynb
@@ -64,15 +64,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyswip import Prolog"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -87,11 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "   Call: (1) pyrun(\"assertz((father(michael,john))).\", _1616) ? "
+     ]
+    }
+   ],
    "source": [
+    "from pyswip import Prolog\n",
     "KB = Prolog()\n",
+    "\n",
     "KB.assertz(\"father(michael,john)\")\n",
     "KB.assertz(\"father(michael,gina)\")\n",
     "KB.asserta(\"father(giuseppe,mario)\")"
@@ -552,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
