--- a/lessons/hands-on-nethack/NetHackProlog.ipynb
+++ b/lessons/hands-on-nethack/NetHackProlog.ipynb
@@ -78,17 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "   Call: (1) pyrun(\"assertz((father(michael,john))).\", _1616) ? "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyswip import Prolog\n",
     "KB = Prolog()\n",
@@ -107,18 +99,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'X': 'john'}, {'X': 'gina'}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(KB.query(\"father(michael,X)\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Y': 'mario'}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(KB.query(\"father(giuseppe,Y)\"))"
    ]
