from path genetic to action genetic, fixed valid actions

--- a/lessons/hands-on-search/search.ipynb
+++ b/lessons/hands-on-search/search.ipynb
@@ -88,7 +88,7 @@
     "        #print(f'actions: ,{action1, action2}')\n",
     "        return True\n",
     "\n",
-    "def crossover(path1, path2):\n",
+    "def crossover_path(path1, path2):\n",
     "    \"\"\"Crossover two paths\"\"\"\n",
     "    # randomly select a crossover point\n",
     "    i = np.random.randint(1, min(len(path1), len(path2)))\n",
@@ -98,14 +98,12 @@
     "    # return the two paths joined at the crossover point\n",
     "    # TODO:  implement controls on move validity\n",
     "\n",
-    "\n",
     "    # until the path is valid, merge the 2 path\n",
     "    \"\"\"print(f'point of crossover: {i}')\n",
     "    print(f'path1: {path1}')\n",
     "    print(f'path2: {path2}')\n",
     "    print(f'lenp1: {len(path1[:i])}, path1[:i]: {path1[:i]}')\n",
     "    print(f'lenp2: {len(path2[i:])}, path2[i:]: {path2[i:]}')\"\"\"\n",
-    "\n",
     "\n",
     "    pathtry = path1[:i] + path2[i:]\n",
     "\n",
@@ -117,12 +115,21 @@
     "            return path1[:i] + path2[i:idx-1]\n",
     "    return pathtry\n",
     "\n",
-    "def mutate(path, mutation_rate=0.05):\n",
+    "def crossover(actions1, actions2):\n",
+    "    \"\"\"Crossover two paths\"\"\"\n",
+    "    # randomly select a crossover point\n",
+    "    i = np.random.randint(1, min(len(actions1), len(actions2)))\n",
+    "    # return the two paths joined at the crossover point\n",
+    "    return actions1[:i] + actions2[i:]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def mutate_path(path, mutation_rate=0.05):\n",
     "    \"\"\"Mutate a path\"\"\"\n",
     "    # randomly select n postions to mutate\n",
     "    print(f'before mutation {path}')\n",
     "    actions = actions_from_path(start, path[1:])\n",
-    "    idxs = random.sample(list(range(len(actions))), k = math.floor(len(actions)/10))\n",
+    "    idxs = random.sample(list(range(len(actions)))[1:], k = math.floor(len(actions)/10))\n",
     "    print(\"idxs\", idxs)\n",
     "    # randomly select new actions for each position and replace\n",
     "    # TODO?  implement controls on move validity\n",
@@ -133,7 +140,16 @@
     "        actions[idx] = action\n",
     "    path = path_from_actions(path[0], actions)\n",
     "    print(f'after mutation {path}')\n",
-    "    return path"
+    "    return path\n",
+    "\n",
+    "def mutate(actions, mutation_rate=0.05):\n",
+    "    \"\"\"Mutate a path\"\"\"\n",
+    "    # randomly select n postions to mutate\n",
+    "    idxs = random.sample(list(range(len(actions))), k = math.floor(len(actions)/10))\n",
+    "    # randomly select new actions for each position and replace\n",
+    "    for idx in idxs:\n",
+    "        actions[idx] = random.choice([0, 1, 2, 3])\n",
+    "    return actions"
    ]
   },
   {
@@ -151,23 +167,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "math.ceil(2.4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "MAX_GENERATIONS = 10\n",
-    "MAX_INDIVIDUALS = 50\n",
+    "MAX_GENERATIONS = 100\n",
+    "MAX_INDIVIDUALS = 100\n",
     "\n",
     "best_scores =[]\n",
     "best_paths = []\n",
     "\n",
+    "\n",
+    "\n",
+    "# this is manhattan distance from the last element of the path to the target\n",
+    "fitness_function = lambda path: abs(path[-1][0] - target[0]) + abs(path[-1][1] - target[1])\n",
     "state = env.reset()\n",
     "\"\"\"env = gym.make(\n",
     "    \"MiniHack-Navigation-Custom-v0\",\n",
@@ -177,39 +186,42 @@
     ")\n",
     "state = env.reset()\n",
     "env.render()\"\"\"\n",
-    "\n",
-    "# this is manhattan distance from the last element of the path to the target\n",
-    "fitness_function = lambda path: abs(path[-1][0] - target[0]) + abs(path[-1][1] - target[1])\n",
-    "\n",
     "# create a list of individuals, starting with random moves (illegal actions filtered out)\n",
     "print(\"> Creating initial population...\")\n",
     "individuals = [true_random_nsteps(game_map, start, target) for _ in range(MAX_INDIVIDUALS)]\n",
     "best_fitness = np.inf\n",
     "\n",
-    "# create a list of tuples (individual, fitness)\n",
     "print(\"> Evolving...\")\n",
     "for generation in tqdm(range(MAX_GENERATIONS), postfix=f'best score: {best_fitness:.2f}'):\n",
-    "    \n",
-    "    state = env.reset()\n",
     "    \n",
     "    generation_scores = []\n",
     "    \n",
     "    fitnesses = [fitness_function(individual) for individual in individuals]\n",
+    "    ind_actions = [actions_from_path(start, ind) for ind in individuals]\n",
     "    generation_scores.append(min(fitnesses))\n",
     "\n",
     "    # this is a list of tuples (individual, fitness). individual is a list of moves\n",
     "    population = list(zip(individuals, fitnesses))\n",
+    "    actions =  list(zip(ind_actions, fitnesses))\n",
     "\n",
     "    # sorting the population by best fitness (lower is better)\n",
     "    population.sort(key=lambda x: x[1])\n",
+    "    actions.sort(key=lambda x:x[1])\n",
+    "    # sort ind_actions with respect to population\n",
+    "    \n",
     "    print(f\"best score: {population[0][1]:.2f}\")\n",
+    "\n",
     "    # take 2 best individuals -> maybe can be replaced with probability distribution based on fitness\n",
     "    # also roulette wheel selection.\n",
-    "    child1, child2 = population[0], population[1]\n",
-    "    #print(f\"len1:{len(child1[0])}\\tlen2:{len(child2[0])}\")\n",
-    "    offspring = [crossover(child1[0], child2[0]) for _ in range(MAX_INDIVIDUALS)]\n",
+    "\n",
+    "    child1, child2, = actions[0][0], actions[1][0]\n",
+    "\n",
+    "\n",
+    "    offspring = [crossover(child1, child2) for _ in range(MAX_INDIVIDUALS)]\n",
     "    offspring = [mutate(child) for child in offspring]\n",
-    "    individuals = offspring\n",
+    "    ind_actions = offspring\n",
+    "    individuals = [path_from_actions(game_map, start, child) for child in offspring]\n",
+    "\n",
     "    best_fitness = population[0][1]\n",
     "    best_scores.append(population[0][1])    \n",
     "    best_paths.append(population[0][0])\n",
@@ -222,7 +234,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for path in best_paths:\n",
+    "    print(path)\n",
+    "    for x,y in path:\n",
+    "        if is_wall(game_map[x,y]):\n",
+    "            print(\"ciau\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "#print(target)"
+   ]
   },
   {
    "cell_type": "code",
@@ -231,8 +253,8 @@
    "outputs": [],
    "source": [
     "# for every individual, print its fitness and the path\n",
-    "for individual, fitness in population:\n",
-    "    print(f\"Fitness: {fitness:.2f}\")\n"
+    "\"\"\"for individual, fitness in population:\n",
+    "    print(f\"Fitness: {fitness:.2f}\")\"\"\"\n"
    ]
   },
   {
@@ -242,7 +264,7 @@
    "outputs": [],
    "source": [
     "image = plt.imshow(game[:, 300:975])\n",
-    "for generation, path in enumerate(best_paths):\n",
+    "for generation, path in enumerate(best_paths[:-10]):\n",
     "    plt.title(f\"Generation {generation}\")\n",
     "    start = path[0]\n",
     "    path = path[1:]\n",
@@ -254,6 +276,26 @@
     "        display.clear_output(wait=True)\n",
     "        image.set_data(s['pixel'][:, 300:975])\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = true_random_nsteps(game_map, start, target)\n",
+    "path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actions = actions_from_path(start, path[1:])\n",
+    "actions"
    ]
   }
  ],
