comparison with random

--- a/lessons/hands-on-search/search.ipynb
+++ b/lessons/hands-on-search/search.ipynb
@@ -160,11 +160,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def pathlen(path, target):\n",
+    "    # Give the first occurernce of the target in the path\n",
+    "    for idx, pos in enumerate(path):\n",
+    "        if pos == target:\n",
+    "            return idx+1\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "MAX_GENERATIONS = 1000\n",
     "MAX_INDIVIDUALS = 100\n",
     "\n",
     "best_scores =[]\n",
     "best_paths = []\n",
+    "zero_fitness = []\n",
     "\n",
     "print(f\"> start: {start}, target: {target}\")\n",
     "\n",
@@ -176,10 +191,10 @@
     "best_fitness = np.inf\n",
     "\n",
     "print(\"> Evolving...\")\n",
-    "for generation in tqdm(range(MAX_GENERATIONS), postfix=f'best score: {best_fitness:.2f}'):\n",
+    "for generation in tqdm(range(MAX_GENERATIONS)):\n",
     "    \n",
     "    generation_scores = []\n",
-    "    \n",
+    "\n",
     "    fitnesses = [fitness_function(individual) for individual in individuals]\n",
     "    ind_actions = [actions_from_path(start, ind) for ind in individuals]\n",
     "    generation_scores.append(min(fitnesses))\n",
@@ -211,10 +226,7 @@
     "    #print(f\"Generation {generation}: best score {best_fitness:.2f}\")\n",
     "\n",
     "    if best_fitness == 0:\n",
-    "        break\n",
-    "\n",
-    "    # update tqdm postfix\n",
-    "    tqdm._instances.clear()\n",
+    "        zero_fitness.append(population[0][0])\n",
     "    \n",
     "# print best score and best path\n",
     "best_idx = np.argmin(best_scores)\n",
@@ -255,29 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"env = gym.make(\n",
-    "    \"MiniHack-Navigation-Custom-v0\",\n",
-    "    observation_keys=(\"chars\", \"pixel\"),\n",
-    "    des_file = \"complex_maze.des\",\n",
-    "    max_episode_steps=10000,\n",
-    ")\n",
-    "\n",
-    "state = env.reset()\n",
-    "game_map = state['chars']\n",
-    "game = state['pixel']\n",
-    "start = get_player_location(game_map)\n",
-    "target = get_target_location(game_map)\"\"\"\n",
-    "\n",
-    "plt.rcParams['figure.figsize'] = [17, 7]\n",
+    "\"\"\"plt.rcParams['figure.figsize'] = [17, 7]\n",
     "\n",
     "image = plt.imshow(game[:, 300:975])\n",
-    "\"\"\"best_paths = best_paths[-1]\n",
-    "for i, p in enumerate(best_paths):\n",
-    "    if i == len(best_paths)-1:\n",
-    "        break\n",
-    "    if p == best_paths[i+1]:\n",
-    "        best_paths.pop(i+1)\n",
-    "\"\"\"\n",
     "# for generation, path in enumerate(best_paths):\n",
     "# plt.title(f\"Generation {generation}, fitness: {best_scores[generation]:.2f}, last move: {path[-1]}\")\n",
     "#start = best_paths[0]\n",
@@ -285,12 +277,22 @@
     "actions = actions_from_path(start, best_paths[best_idx])\n",
     "\n",
     "for i, action in enumerate(actions):\n",
-    "    s, _, _, _ = env.step(action)\n",
-    "    display.display(plt.gcf())\n",
-    "    display.clear_output(wait=True)\n",
-    "    plt.title(f\"Generation {generation}, fitness: {best_scores[generation]:.2f}, current position: {path[i]}, action: {action}\")\n",
-    "    image.set_data(s['pixel'][:, 300:975])\n",
-    "    time.sleep(0.1)"
+    "    try: \n",
+    "        s, _, _, _ = env.step(action)\n",
+    "        display.display(plt.gcf())\n",
+    "        display.clear_output(wait=True)\n",
+    "        plt.title(f\"Generation {generation}, fitness: {best_scores[generation]:.2f}, current position: {path[i]}, action: {action}\")\n",
+    "        image.set_data(s['pixel'][:, 300:975])\n",
+    "        #time.sleep(0.1)\n",
+    "    except RuntimeError:\n",
+    "        print('YOU WON! <3')\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot ot best fitness over generations (genetic vs random search)"
    ]
   },
   {
@@ -299,7 +301,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_paths"
+    "# We do a first comparison between the random algorithm and the genetic algorithm\n",
+    "MAX_GENERATIONS = 1000\n",
+    "MAX_INDIVIDUALS = 100\n",
+    "\n",
+    "best_scores_random =[]\n",
+    "best_paths_random = []\n",
+    "\n",
+    "print(f\"> start: {start}, target: {target}\")\n",
+    "\n",
+    "fitness_function = lambda path: abs(path[-1][0] - target[0]) + abs(path[-1][1] - target[1])\n",
+    "\n",
+    "# create a list of individuals, starting with random moves (illegal actions filtered out)\n",
+    "print(\"> Creating initial population...\")\n",
+    "individuals_random = [true_random_nsteps(game_map, start, target) for _ in range(MAX_INDIVIDUALS)]\n",
+    "best_fitness_random = np.inf\n",
+    "\n",
+    "print(\"> Evolving...\")\n",
+    "for generation in tqdm(range(MAX_GENERATIONS)):\n",
+    "    \n",
+    "    generation_scores_random = []\n",
+    "    \n",
+    "    fitnesses_random = [fitness_function(individual) for individual in individuals_random]\n",
+    "    ind_actions_random = [actions_from_path(start, ind) for ind in individuals_random]\n",
+    "    generation_scores_random.append(min(fitnesses_random))\n",
+    "\n",
+    "    # this is a list of tuples (individual, fitness). individual is a list of moves\n",
+    "    population_random = list(zip(individuals_random, fitnesses_random))\n",
+    "    actions_random =  list(zip(ind_actions_random, fitnesses_random))\n",
+    "\n",
+    "    # sorting the population by best fitness (lower is better)\n",
+    "    population_random.sort(key=lambda x: x[1])\n",
+    "    actions_random.sort(key=lambda x:x[1])\n",
+    "    # sort ind_actions with respect to population\n",
+    "    \n",
+    "\n",
+    "    individuals_random = [true_random_nsteps(game_map, start, target) for _ in range(MAX_INDIVIDUALS)]\n",
+    "\n",
+    "    best_fitness_random = population_random[0][1]\n",
+    "    best_scores_random.append(population_random[0][1])    \n",
+    "    best_paths_random.append(population_random[0][0])\n",
+    "    #print(f\"Generation {generation}: best score {best_fitness:.2f}\")\n",
+    "\n",
+    "    if best_fitness_random == 0:\n",
+    "        break\n",
+    "    \n",
+    "# print best score and best path\n",
+    "best_idx_random = np.argmin(best_scores_random)\n",
+    "print(f\"Best score: {best_scores_random[best_idx_random]:.2f}\")\n",
+    "print(f\"Best path: {best_paths_random[best_idx_random]}\")\n",
+    "print(f\"generation of best path: {best_idx_random}\")"
    ]
   },
   {
@@ -308,8 +359,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_player_location(game_map)"
+    "# Plot for each generation the best fitness \n",
+    "plt.plot(best_scores)\n",
+    "# Add title and axis names\n",
+    "plt.title('Fitness over generations for the gentic algorithm')\n",
+    "plt.plot(best_scores_random)\n",
+    "plt.title('Fitness over generations for the random algorithm')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of moves to reach the target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(best_paths[-1]), len(best_paths_random[-1]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(best_paths[-1])\n",
+    "print(best_paths_random[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathlen(best_paths[-1], target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(zero_fitness)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for element in zero_fitness:\n",
+    "    print(pathlen(element, target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min([pathlen(element, target) for element in zero_fitness])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -328,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
