--- a/lessons/hands-on-search/search.ipynb
+++ b/lessons/hands-on-search/search.ipynb
@@ -254,6 +254,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for path in best_paths:\n",
     "    for x, y in path:\n",
     "        if is_wall(game_map[x,y]):\n",
@@ -267,13 +276,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"plt.rcParams['figure.figsize'] = [17, 7]\n",
+    "env.reset()\n",
+    "plt.rcParams['figure.figsize'] = [17, 7]\n",
     "\n",
     "image = plt.imshow(game[:, 300:975])\n",
     "# for generation, path in enumerate(best_paths):\n",
     "# plt.title(f\"Generation {generation}, fitness: {best_scores[generation]:.2f}, last move: {path[-1]}\")\n",
     "#start = best_paths[0]\n",
     "#path = best_paths[-1]\n",
+    "actions = []\n",
     "actions = actions_from_path(start, best_paths[best_idx])\n",
     "\n",
     "for i, action in enumerate(actions):\n",
@@ -281,11 +292,13 @@
     "        s, _, _, _ = env.step(action)\n",
     "        display.display(plt.gcf())\n",
     "        display.clear_output(wait=True)\n",
-    "        plt.title(f\"Generation {generation}, fitness: {best_scores[generation]:.2f}, current position: {path[i]}, action: {action}\")\n",
+    "        plt.title(f\"Generation {generation}, fitness: {best_scores[generation]:.2f}, current position: {best_paths[best_idx][i]}, action: {action}\")\n",
     "        image.set_data(s['pixel'][:, 300:975])\n",
     "        #time.sleep(0.1)\n",
+    "        if best_paths[best_idx][i] == target:\n",
+    "            print('YOU WON! <3')\n",
     "    except RuntimeError:\n",
-    "        print('YOU WON! <3')\"\"\""
+    "        print('YOU WON! <3')"
    ]
   },
   {
@@ -470,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
