rebasing the project, main jupyter notebook

--- a/lessons/hands-on-search/search.ipynb
+++ b/lessons/hands-on-search/search.ipynb
@@ -243,28 +243,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'fitness_function' from 'fitness' (/home/irene/Desktop/aif-project/lessons/hands-on-search/fitness.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/home/irene/Desktop/aif-project/lessons/hands-on-search/search.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/irene/Desktop/aif-project/lessons/hands-on-search/search.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfitness\u001b[39;00m \u001b[39mimport\u001b[39;00m fitness_function\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/irene/Desktop/aif-project/lessons/hands-on-search/search.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m checkpoints \u001b[39m=\u001b[39m [target]\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'fitness_function' from 'fitness' (/home/irene/Desktop/aif-project/lessons/hands-on-search/fitness.py)"
-     ]
-    }
-   ],
-   "source": [
-    "from fitness import fitness_function\n",
-    "checkpoints = [target]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -278,7 +256,7 @@
     "\n",
     "print(f\"> start: {start}, target: {target}\")\n",
     "\n",
-    "#fitness_function = lambda path: abs(path[-1][0] - target[0]) + abs(path[-1][1] - target[1])\n",
+    "fitness_function = lambda path: abs(path[-1][0] - target[0]) + abs(path[-1][1] - target[1])\n",
     "\n",
     "# create a list of individuals, starting with random moves (illegal actions filtered out)\n",
     "print(\"> Creating initial population...\")\n",
@@ -291,6 +269,8 @@
     "    generation_scores = []\n",
     "\n",
     "    fitnesses = [fitness_function(individual, checkpoints, generation) for individual in individuals]\n",
+    "    #fitness_function = lambda path: abs(path[-1][0] - target[0]) + abs(path[-1][1] - target[1])\n",
+    "\n",
     "    ind_actions = [actions_from_path(start, ind) for ind in individuals]\n",
     "    generation_scores.append(min(fitnesses))\n",
     "\n",
