added new hands-on

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -69,6 +69,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print the map_matrix with matplotlib where the walls are black and the floor is white\n",
+    "plt.imshow(map.map_matrix, cmap='gray')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "individual = Individual(random_nactions(), 1, map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "individual.path[0] == map.start"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +139,7 @@
    "source": [
     "# create first generation\n",
     "MAX_GENERATIONS = 1000\n",
-    "MAX_INDIVIDUALS = 200\n",
+    "MAX_INDIVIDUALS = 100\n",
     "best_individuals = []\n",
     "\n",
     "print(\"> Creating initial population...\")\n",
@@ -130,17 +159,23 @@
     "    # also roulette wheel selection.\n",
     "    child1, child2 = individuals[0].actions, individuals[1].actions\n",
     "    offspring = [crossover(child1, child2) for _ in range(MAX_INDIVIDUALS)]\n",
-    "    offspring = [mutate(child) for child in offspring]\n",
+    "    offspring = [mutate(child, valid_actions_bitmap(map.start, path_from_actions(map.map, map.start, child))) for child in offspring]\n",
     "\n",
     "    individuals = [Individual(offspring[i], generation+1, map) for i in range(MAX_INDIVIDUALS)]\n",
     "    individuals.sort(key=lambda x: x.fitness, reverse=False)\n",
+    "\n",
+    "    # print every individual fitness\n",
+    "    \"\"\"for i in range(MAX_INDIVIDUALS):\n",
+    "        print(f\"Individual {i} fitness: {individuals[i].fitness}\")\n",
+    "\"\"\"\n",
     "    # print(f\"Generation {generation}: best score {best_fitness:.2f}\")\n",
     "    \"\"\"\n",
     "    if best_fitness == 0:\n",
     "        zero_fitness.append(population[0][0])\"\"\"\n",
     "best_fitness = individuals[0].fitness\n",
     "best_individuals.append(individuals[0])\n",
-    "print(f'best_individual in generation {generation}: {best_fitness}, wrong actions: {individuals[0].wrong_actions}')\n"
+    "print(f'best_individual in generation {generation}: {best_fitness}, wrong actions: {individuals[0].wrong_actions}')\n",
+    "\n"
    ]
   },
   {
