hands-on problog

--- a/lessons/hands-on-problog/Problog.ipynb
+++ b/lessons/hands-on-problog/Problog.ipynb
@@ -238,7 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_evaluatable().create_from(p).evaluate()"
+    "get_evaluatable().create_from(p).evaluate()\n",
+    "# probability of win is that head comes up on coin c1 (first try) or c2 (second try): 0.4 + 0.6*0.4 = 0.64"
    ]
   },
   {
@@ -348,7 +349,8 @@
     "query(smokes(carl)).\n",
     "query(smokes(bob)).\n",
     "\"\"\")\n",
-    "get_evaluatable().create_from(t2).evaluate()"
+    "get_evaluatable().create_from(t2).evaluate()\n",
+    "# probability that bob smokes is that Bob is tressed (0.4) or that he's not stressed (0.6) and Ann is stressed (0.8) and that Ann influences Bob (0.6)"
    ]
   },
   {
@@ -372,7 +374,8 @@
     "query(col(2,_)).\n",
     "evidence(col(2,green)).\n",
     "\"\"\")\n",
-    "get_evaluatable().create_from(t3).evaluate()"
+    "get_evaluatable().create_from(t3).evaluate()\n",
+    "# win = 0.12 = 0.4*0.3 = probability of heads and red on color 1 assuming that color 2 is green"
    ]
   },
   {
@@ -428,6 +431,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = PrologString(\"\"\"\n",
+    "0.6::difficult ; 0.7::smart.\n",
+    "0.85::success :- difficult, smart.\n",
+    "0.1::success :- difficult, \\+smart.\n",
+    "0.98::success :- \\+difficult, smart.\n",
+    "0.45::success :- \\+difficult, \\+smart.\n",
+    "query(success).\n",
+    "\"\"\")\n",
+    "get_evaluatable().create_from(t).evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -445,12 +472,12 @@
     "- Add the predicate _takes(S, C)_ that connects a student _student(S)_ to the course _course(C)_ taken.\n",
     "- Modify the previous elements (_difficult(C), smart(S)_) to add the new clauses of the previous point (_student(S), course(C)_).\n",
     "- Solve the following queries:\n",
-    "    - _query(difficult(_))._\n",
-    "    - _query(smart(_))._\n",
-    "    - _query(success(_,_))._\n",
+    "    - `query(difficult(_)).`\n",
+    "    - `query(smart(_)).`\n",
+    "    - `query(success(_,_)).`\n",
     "- Specify the following evidences:\n",
-    "    - _evidence(difficult(c2))._\n",
-    "    - _evidence(success(s1,c2))._"
+    "    - `evidence(difficult(c2)).`\n",
+    "    - `evidence(success(s1,c2)).`"
    ]
   },
   {
@@ -479,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
