--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -127,8 +127,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#individual = Individual(random_nactions(), 1, map)\n",
-    "#individual.__str__"
+    "individual = Individual(random_nactions(), 1, map)\n",
+    "#individual.__str__\n",
+    "individual.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_loops(individual.path)"
    ]
   },
   {
@@ -161,7 +171,7 @@
     "    offspring = [crossover(child1, child2) for _ in range(MAX_INDIVIDUALS)]\n",
     "    offspring = [mutate(child, valid_actions_bitmap(map.start, path_from_actions(map.map, map.start, child))) for child in offspring]\n",
     "\n",
-    "    individuals = [Individual(offspring[i], generation+1, map) for i in range(MAX_INDIVIDUALS)]\n",
+    "    individuals[2:] = [Individual(offspring[i], generation+1, map) for i in range(MAX_INDIVIDUALS-2)]\n",
     "    individuals.sort(key=lambda x: x.fitness, reverse=False)\n",
     "\n",
     "    # print every individual fitness\n",
@@ -215,7 +225,7 @@
     "        plt.title(f\"Generation {individuals[0].fitness}, fitness: {individuals[0].fitness}, current position: {individuals[0].path[i]}, action: {action}, wrong actions: {wrong}, action: {i+1}/{len(actions)}\")\n",
     "        image.set_data(s['pixel'][:, 300:975])\n",
     "        #time.sleep(0.1)\n",
-    "        if individuals[0].path[i] == target:\n",
+    "        if individuals[0].path[i] == map.target:\n",
     "            print('YOU WON! <3')\n",
     "            break\n",
     "        if individuals[0].path[i] == individuals[0].path[i-1]:\n",
