--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "#random_nsteps(game_map, start, target) # RANDOM VALID PATH\n",
-    "random_nactions()                      # RANDOM (TO CHECK VALIDITY) ACTIONS"
+    "random_nactions(300)                      # RANDOM (TO CHECK VALIDITY) ACTIONS"
    ]
   },
   {
@@ -167,8 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "individual = Individual(random_nactions(), 1, map)\n",
-    "individual1 = Individual(random_nactions(), 1, map)\n",
+    "individual = Individual(random_nactions(300), 1, map)\n",
+    "individual1 = Individual(random_nactions(300), 1, map)\n",
     "len(crossover_uniform(individual.actions, individual1.actions))"
    ]
   },
@@ -187,6 +187,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "count_dead_ends(individual.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "random.random()"
    ]
   },
@@ -196,14 +205,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(individual.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# create first generation\n",
-    "MAX_GENERATIONS = 1000\n",
+    "MAX_GENERATIONS = 100\n",
     "MAX_INDIVIDUALS = 100\n",
     "best_individuals = []\n",
     "\n",
     "print(\"> Creating initial population...\")\n",
-    "individuals = [Individual(random_nactions(), 1, map) for _ in range(MAX_INDIVIDUALS)]\n",
-    "individuals.sort(key=lambda x: x.fitness, reverse=False)\n",
+    "individuals = [Individual(random_nactions(300), 1, map) for _ in range(MAX_INDIVIDUALS)]\n",
+    "individuals.sort(key=lambda x: x.fitness, reverse=True)\n",
     "#print(f'best_individual: {individuals[0].fitness}')\n",
     "print(\"> Evolving...\")\n",
     "\n",
@@ -211,17 +229,17 @@
     "\n",
     "    best_fitness = individuals[0].fitness\n",
     "    best_individuals.append(individuals[0]) \n",
-    "    if generation % 100 == 0:\n",
+    "    if generation % 10 == 0:\n",
     "        print(f'best_individual in generation {generation}: fitness: {best_fitness}, wrong actions: {individuals[0].wrong_actions}, loops: {individuals[0].loops}')\n",
     "\n",
     "    # take 2 best individuals -> maybe can be replaced with probability distribution based on fitness\n",
     "    # also roulette wheel selection.\n",
     "    child1, child2 = individuals[0].actions, individuals[1].actions\n",
     "    offspring = [crossover_uniform(child1, child2) for _ in range(MAX_INDIVIDUALS)]\n",
-    "    offspring = [mutate(child, valid_actions_bitmap(map.start, path_from_actions(map.map, map.start, child)[0])) for child in offspring]\n",
+    "    offspring = [mutate(child, valid_actions_bitmap(map.start, path_from_actions(map.map, map.start, child))) for child in offspring]\n",
     "\n",
     "    individuals[2:] = [Individual(offspring[i], generation+1, map) for i in range(MAX_INDIVIDUALS-2)]\n",
-    "    individuals.sort(key=lambda x: x.fitness, reverse=False)\n",
+    "    individuals.sort(key=lambda x: x.fitness, reverse=True)\n",
     "\n",
     "    # print every individual fitness\n",
     "    \"\"\"for i in range(MAX_INDIVIDUALS):\n",
@@ -254,6 +272,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "individuals[3].generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "env.reset()\n",
     "plt.rcParams['figure.figsize'] = [17, 7]\n",
     "\n",
@@ -271,7 +298,7 @@
     "        s, _, _, _ = env.step(action)\n",
     "        display.display(plt.gcf())\n",
     "        display.clear_output(wait=True)\n",
-    "        plt.title(f\"Generation {individuals[0].fitness}, fitness: {individuals[0].fitness}, current position: {individuals[0].path[i]}, action: {action}, wrong actions: {wrong}, action: {i+1}/{len(actions)}\")\n",
+    "        plt.title(f\"Generation {individuals[0].generation}, fitness: {individuals[0].fitness}, current position: {individuals[0].path[i]}, action: {action}, wrong actions: {wrong}, action: {i+1}/{len(actions)}\")\n",
     "        image.set_data(s['pixel'][:, 300:975])\n",
     "        #time.sleep(0.1)\n",
     "        if individuals[0].path[i] == map.target:\n",
@@ -374,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
