--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -17,7 +17,10 @@
     "from classes import *\n",
     "from gen_utils import *\n",
     "from tqdm import tqdm\n",
-    "from utils import *"
+    "from utils import *\n",
+    "\n",
+    "# fix the seed for reproducibility\n",
+    "random.seed(42)"
    ]
   },
   {
