added nth for prolog list access

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -109,7 +109,9 @@
    "outputs": [],
    "source": [
     "KB.retractall(\"maze(_)\")\n",
-    "KB.asserta(f'maze({map.map_matrix})')"
+    "KB.retractall(\"start(_,_)\")\n",
+    "KB.asserta(f'maze({map.map_matrix})')\n",
+    "KB.asserta(f'start({map.start[0]}, {map.start[1]})')"
    ]
   },
   {
@@ -119,7 +121,50 @@
    "outputs": [],
    "source": [
     "for i in KB.query(\"maze(X)\"):\n",
-    "    print(f'{i[\"X\"]}\\n')"
+    "    print(f'{i[\"X\"]}\\n')\n",
+    "\n",
+    "list(KB.query(\"maze(X)\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NTH1\n",
+    "\n",
+    "In Prolog, `nth1/3` is a built-in predicate that is used to access elements in a list by index. The `nth1/3` predicate has the following form:\n",
+    "\n",
+    "```prolog\n",
+    "nth1(Index, List, Element)\n",
+    "```\n",
+    "Index: The index of the element you want to access.\n",
+    "\n",
+    "List: The list from which you want to access the element.\n",
+    "\n",
+    "Element: The variable that will be unified with the element at the specified index.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = list(KB.query(\"maze(M), nth1(14, M, Row), nth1(23, Row, Cell)\"))\n",
+    "if result:\n",
+    "    cell_value = result[0][\"Cell\"]\n",
+    "    print(f\"Cell value: {cell_value}\")\n",
+    "else:\n",
+    "    print(\"Query result is empty.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(KB.query(\"start(ROW,COL)\"))"
    ]
   },
   {
