--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -611,7 +611,8 @@
     "        if individuals[0].path[i] == individuals[0].path[i-1]:\n",
     "            wrong += 1\n",
     "    except RuntimeError:\n",
-    "        print('YOU WON! <3')"
+    "        print('YOU WON! <3')\n",
+    "    "
    ]
   }
  ],
